# snow

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  appveyor.yml  build.rs  ci-tests.sh  mise.toml  rustfmt.toml  travis-local.sh  vectors.txt
.github/workflows/: rust.yml
benches/: benches.rs
docs/: CNAME  InitStage.t.html  StateProblem.t.html  all.html  enum.Prerequisite.html  enum.Session.html  enum.SnowError.html  index.html  struct.NoiseBuilder.html  trait.CryptoResolver.html
docs/doc/: aliases.js  search-index.js
docs/doc/implementors/core/clone/: trait.Clone.js
docs/doc/implementors/core/cmp/: trait.PartialEq.js
docs/doc/implementors/core/convert/: trait.TryFrom.js
docs/doc/implementors/core/default/: trait.Default.js
docs/doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/doc/implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
docs/doc/implementors/core/str/: trait.FromStr.js
docs/doc/implementors/failure/: trait.Fail.js
docs/doc/implementors/snow/: trait.CryptoResolver.js
docs/doc/snow/: CryptoResolver.t.html  DefaultResolver.t.html  enum.InitStage.html  enum.Session.html  enum.SnowError.html  enum.StateProblem.html  index.html  sidebar-items.js  struct.DefaultResolver.html  struct.NoiseBuilder.html
docs/doc/snow/error/: enum.InitStage.html  enum.Prerequisite.html  enum.SnowError.html
docs/doc/snow/params/: BaseChoice.t.html  HandshakeTokens.t.html  NoiseParams.t.html  enum.BaseChoice.html  enum.CipherChoice.html  enum.HandshakeModifier.html  enum.HandshakePattern.html  enum.Token.html  struct.HandshakeChoice.html  struct.HandshakeModifierList.html  struct.HandshakeTokens.html  type.MessagePatterns.html
docs/doc/snow/params/patterns/: HandshakeModifierList.t.html  enum.HandshakeModifier.html  enum.HandshakePattern.html  struct.HandshakeChoice.html  type.MessagePatterns.html
docs/doc/snow/session/: Session.t.html  enum.Session.html
docs/doc/snow/types/: Cipher.t.html  Random.t.html  sidebar-items.js  trait.Cipher.html  trait.Hash.html  trait.Random.html
docs/doc/snow/wrappers/: index.html  sidebar-items.js
docs/doc/snow/wrappers/crypto_wrapper/: HashBLAKE2s.t.html  HashSHA512.t.html  index.html  struct.CipherAESGCM.html  struct.CipherChaChaPoly.html  struct.HashBLAKE2b.html  struct.HashBLAKE2s.html  struct.HashSHA256.html
docs/doc/snow/wrappers/hacl_wrapper/: Dh25519.t.html  HaclStarResolver.t.html  HashSHA256.t.html  sidebar-items.js  struct.Dh25519.html
docs/doc/snow/wrappers/rand_wrapper/: RandomOs.t.html  index.html  struct.RandomOs.html
docs/doc/snow/wrappers/ring_wrapper/: CipherAESGCM.t.html  sidebar-items.js  struct.HashSHA512.html
docs/doc/src/snow/: cipherstate.rs.html  constants.rs.html  error.rs.html  handshakestate.rs.html  lib.rs.html  noise.rs.html  session.rs.html  symmetricstate.rs.html  transportstate.rs.html  types.rs.html  utils.rs.html
docs/doc/src/snow/params/: mod.rs.html  patterns.rs.html
docs/doc/src/snow/wrappers/: crypto_wrapper.rs.html  hacl_wrapper.rs.html  mod.rs.html  rand_wrapper.rs.html  ring_wrapper.rs.html
docs/error/: Prerequisite.t.html  SnowError.t.html  enum.StateProblem.html
docs/noise/: NoiseBuilder.t.html  struct.DefaultResolver.html  struct.NoiseBuilder.html  trait.CryptoResolver.html
docs/params/: CipherChoice.t.html  DHChoice.t.html  HandshakeChoice.t.html  HandshakeModifier.t.html  HashChoice.t.html  enum.DHChoice.html  enum.HashChoice.html  index.html  sidebar-items.js  struct.HandshakeChoice.html  struct.HandshakeTokens.html  struct.NoiseParams.html  type.MessagePatterns.html
docs/params/patterns/: HandshakePattern.t.html  MessagePatterns.t.html  enum.Token.html  struct.HandshakeModifierList.html  struct.HandshakeTokens.html
docs/types/: Dh.t.html  index.html  trait.Dh.html
docs/wrappers/crypto_wrapper/: CipherChaChaPoly.t.html  HashBLAKE2b.t.html  sidebar-items.js  struct.Dh25519.html  struct.HashSHA512.html
docs/wrappers/hacl_wrapper/: index.html  struct.CipherChaChaPoly.html  struct.HaclStarResolver.html  struct.HashSHA256.html  struct.HashSHA512.html
docs/wrappers/rand_wrapper/: sidebar-items.js
docs/wrappers/ring_wrapper/: RingAcceleratedResolver.t.html  index.html  struct.CipherAESGCM.html  struct.CipherChaChaPoly.html  struct.HashSHA256.html  struct.RingAcceleratedResolver.html
examples/: oneway.rs  simple.rs
fuzz/: Cargo.toml
fuzz/src/: main.rs
hfuzz/: Cargo.toml
src/: async_transportstate.rs  builder.rs  cipherstate.rs  constants.rs  crypto_stuff.rs  crypto_types.rs  error.rs  handshake.rs  handshakecryptoowner.rs  handshakestate.rs  lib.rs  main.rs  noise.rs  params.rs  patterns.rs  protocol_name.rs  resolvers.rs  session.rs  stateless_transportstate.rs  symmetricstate.rs  transportstate.rs  types.rs  utils.rs
src/crypto_wrappers/: mod.rs  rust_crypto.rs
src/params/: mod.rs  patterns.rs
src/resolvers/: default.rs  hacl_star.rs  libsodium.rs  mod.rs  ring.rs
src/wrappers/: crypto_wrapper.rs  hacl_wrapper.rs  mod.rs  rand_wrapper.rs  ring_wrapper.rs
tasks/: test
tests/: general.rs  lib.rs  vectors.rs
tests/vectors/: cacophony.txt  noise-c-basic.txt  snow-extended.txt  snow-multipsk.txt  snow.txt
